[metadata]
name = vsp_wrapper
version = 0.8
summary = Component wrapper for VSP (Vehicle Sketch Pad)
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/vsp_wrapper
download-url = 
author = Scott E. Townsend
author-email = scott.e.townsend@nasa.gov
maintainer = Scott E. Townsend
maintainer-email = scott.e.townsend@nasa.gov
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

